--- a/.configuration/devcenter/workloads/customizations/ides/vstudio.dsc.yaml
+++ b/.configuration/devcenter/workloads/customizations/ides/vstudio.dsc.yaml
@@ -5,39 +5,53 @@ properties:
   ### RESOURCES: System Configuration
   ########################################
   resources:
-    ### Install Visual Studio
-    ### -------------------------------------
+    ### Install Visual Studio 2022 Enterprise
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       id: Microsoft.VisualStudio.2022.Enterprise
       directives:
-        description: Install Visual Studio 2022 Microsoft.VisualStudio.2022.Enterprise
-        allowPrerelease: true
+       description: Install Visual Studio 2022 Enterprise
+       allowPrerelease: true
       settings:
         id: Microsoft.VisualStudio.2022.Enterprise
     ### Install VS Workloads
     ### -------------------------------------
     - resource: Microsoft.VisualStudio.DSC/VSComponents
+      id: Microsoft.VisualStudio.Workloads
       directives:
         description: Install required VS workloads from vsconfig file
         allowPrerelease: true
       settings:
-        productId: Microsoft.VisualStudio.2022.Enterprise
-        channelId: VisualStudio.17.Preview
-        components:
-          - Microsoft.VisualStudio.Workload.CoreEditor
-          - Microsoft.VisualStudio.Workload.Azure
-          - Microsoft.VisualStudio.Workload.Data
-          - Microsoft.VisualStudio.Workload.DataScience
-          - Microsoft.VisualStudio.Workload.ManagedDesktop
-          - Microsoft.VisualStudio.Workload.NativeDesktop
-          - Microsoft.VisualStudio.Workload.NetCrossPlat
-          - Microsoft.VisualStudio.Workload.NetWeb
-          - Microsoft.VisualStudio.Workload.Node
-          - Microsoft.VisualStudio.Workload.Python
-          - Microsoft.VisualStudio.Workload.Universal
-          - Microsoft.VisualStudio.Workload.VisualStudioExtension
+        productId: Microsoft.VisualStudio.Product.Enterprise
+        channelId: VisualStudio.17.Release
+        components: [
+          Microsoft.VisualStudio.Workload.Azure,
+          Microsoft.VisualStudio.Workload.Data,
+          Microsoft.VisualStudio.Workload.DataScience,
+          Microsoft.VisualStudio.Workload.ManagedDesktop,
+          Microsoft.VisualStudio.Workload.NativeCrossPlat,
+          Microsoft.VisualStudio.Workload.NativeDesktop,
+          Microsoft.VisualStudio.Workload.NetCrossPlat,
+          Microsoft.VisualStudio.Workload.NetWeb,
+          Microsoft.VisualStudio.Workload.Node,
+          Microsoft.VisualStudio.Workload.Python,
+          Microsoft.VisualStudio.Workload.Universal,
+          Microsoft.VisualStudio.Workload.VisualStudioExtension,
+          aspire
+        ]
         includeRecommended: true
-        includeOptional: false
-        productArch: x64
-      dependsOn:
+      dependsOn: 
         - Microsoft.VisualStudio.2022.Enterprise
+      ### Updates VS Workloads
+      ### -------------------------------------
+    - resource: PSDscResources/Script
+      id: DotNet.Workloads.Update
+      directives:
+        description: Updates dotne workloads
+      settings:
+        SetScript: |
+          $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User") 
+          dotnet workload update
+        GetScript: return $false
+        TestScript: return $false
+      dependsOn:  
+        - Microsoft.VisualStudio.Workloads
